--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
   "devDependencies": {
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.14",
-    "@babel/preset-env": "^7.13.12",
-    "babel-jest": "^15.0.0"
+    "@babel/preset-env": "^7.13.12"
   }
 }
